fixed spacing?

--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ figcaption {
 }
 
 .bio a {
-  margin: 15px;
+  margin: 5px;
 }
 
 .gallery {
@@ -158,8 +158,8 @@ figcaption {
 
 .friendsGrid {
   display: grid;
-  grid-template: repeat(3, 35em) / repeat(auto-fit, minmax(15em, 1fr));
-  grid-auto-rows: 35em;
+  grid-template: repeat(3, 40em) / repeat(auto-fit, minmax(15em, 1fr));
+  grid-auto-rows: 40em;
   grid-gap: 10px;
 }
 
